# ArgusCameraPub

./: CMakeLists.txt  README.md
apps/camera/: CMakeLists.txt  README.md
apps/camera/common/: CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.h  Mutex.cpp  Mutex.h  ScopedGuard.h  Util.cpp  Util.h  VideoPipeline.cpp  VideoPipeline.h
apps/camera/modules/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  EventThread.cpp  ITask.h  TrackedUniqueObject.h  XMLConfig.cpp  XMLConfig.h
apps/camera/modules/tasks/: Gallery.h  MultiExposure.h  MultiSession.cpp  MultiSession.h  StillCapture.cpp
apps/camera/ui/: CMakeLists.txt
apps/camera/ui/camera/: CMakeLists.txt
apps/camera/ui/capture/: CMakeLists.txt
apps/camera/ui/common/: App.cpp  App.h  AppModuleGeneric.cpp  CMakeLists.txt  IAppModule.h
apps/camera/ui/gallery/: AppModuleGallery.cpp  AppModuleGallery.h  CMakeLists.txt
apps/camera/ui/multiExposure/: CMakeLists.txt
apps/camera/ui/multiSession/: AppModuleMultiSession.cpp  AppModuleMultiSession.h  CMakeLists.txt
apps/camera/ui/video/: AppModuleVideo.cpp  CMakeLists.txt
cmake/: FindArgus.cmake
include/Argus/: CameraDevice.h  CaptureMetadata.h  EGLImage.h  EGLStream.h  EGLSync.h  Settings.h  Types.h
include/Argus/Ext/: DolWdrSensorMode.h  InternalFrameCount.h  NonLinearHistogram.h
include/EGLStream/: ArgusCaptureMetadata.h  EGLStream.h  Frame.h  MetadataContainer.h
include/EGLStream/NV/: ImageNativeBuffer.h
samples/bayerAverageMap/: main.cpp
samples/cudaBayerDemosaic/: CudaBayerDemosaicConsumer.cpp  CudaBayerDemosaicConsumer.h  CudaBayerDemosaicKernel.cu  CudaBayerDemosaicKernel.h  main.cpp
samples/cudaHistogram/: CMakeLists.txt  histogram.cu  histogram.h  main.cpp
samples/denoise/: CMakeLists.txt
samples/eglImage/: CMakeLists.txt  main.cpp
samples/gstVideoEncode/: CMakeLists.txt  main.cpp
samples/histogram/: CMakeLists.txt  main.cpp
samples/multiSensor/: CMakeLists.txt  main.cpp
samples/multiStream/: CMakeLists.txt  main.cpp
samples/oneShot/: CMakeLists.txt  main.cpp
samples/openglBox/: CMakeLists.txt  main.cpp
samples/openglBox/utils/: MathUtils.cpp  MathUtils.h
samples/syncSensor/: CMakeLists.txt  KLDistance.cu  KLDistance.h  main.cpp
samples/userAutoExposure/: CMakeLists.txt  main.cpp
samples/userAutoWhiteBalance/: CMakeLists.txt  main.cpp
samples/utils/: ArgusHelpers.cpp  ArgusHelpers.h  CUDAHelper.cpp  CUDAHelper.h  CommonOptions.cpp  CommonOptions.h  Courier16x24.h  EGLGlobal.cpp  EGLGlobal.h  Error.h  GLContext.cpp  GLContext.h  IEGLImageSource.h  IObserver.h  InitOnce.h  JPEGConsumer.cpp  NativeBuffer.cpp  NativeBuffer.h  Observed.cpp  Observed.h  Options.cpp  Options.h  Ordered.h  PreviewConsumer.h  RectUtils.cpp  RectUtils.h  Thread.cpp  Thread.h  UniquePointer.h  Validator.h  Value.h  Window.h  WindowBase.cpp  WindowBase.h
samples/utils/glx/: Window.cpp  Window.h
samples/utils/gtk/: GuiElement.cpp  Window.h
samples/utils/nvmmapi/: NvNativeBuffer.cpp
samples/yuvJpeg/: CMakeLists.txt  main.cpp
