cmake_minimum_required (VERSION 2.6)

add_subdirectory(apps/camera)
add_subdirectory(samples/bayerAverageMap)
add_subdirectory(samples/cudaBayerDemosaic)
add_subdirectory(samples/cudaHistogram)
add_subdirectory(samples/denoise)
add_subdirectory(samples/eglImage)
add_subdirectory(samples/gstVideoEncode)
add_subdirectory(samples/histogram)
add_subdirectory(samples/multiSensor)
add_subdirectory(samples/multiStream)
add_subdirectory(samples/oneShot)
add_subdirectory(samples/openglBox)
add_subdirectory(samples/syncSensor)
add_subdirectory(samples/yuvJpeg)
add_subdirectory(samples/userAutoExposure)
add_subdirectory(samples/userAutoWhiteBalance)
add_subdirectory(samples/utils)

include(CPack)
